# radio_core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  make.bat  pyproject.toml  requirements.txt
source/: CMakeLists.txt
source/cmake/: build_configure.cmake  build_initialize.cmake  compiler_flags.cmake  external_libs.cmake  target.cmake  target_benchmark.cmake  target_install.cmake  target_test.cmake
source/cmake/module/: FindClangTidy.cmake
source/cmake/platform/: platform_apple.cmake  platform_unix.cmake  platform_unix_common.cmake  platform_win32.cmake  platform_win32_msvc.cmake
source/radio_core/: CMakeLists.txt
source/radio_core/base/: CMakeLists.txt  algorithm.h  aligned_allocator.h  aligned_malloc.h  aligned_register.h  bit_cast.h  build_config.h  byte_util.h  compiler_specific.h  constants.h  container.h  convert.h  ctype.h  exception.h  format.h  frequency.h  frequency_duration.h  half.h  interval.h  result.h  reverse_storage_ring_buffer.h  reverse_storage_ring_double_buffer.h  ring_buffer.h  ring_buffer_stream.h  ring_double_buffer.h  scoped_timer.h  source_location.h  static_vector.h  stream_util.h  string_util.h  unreachable.h  unroll.h  value_printer.h  variant.h  verify.h
source/radio_core/base/internal/: algorithm_test.cc  aligned_allocator_test.cc  aligned_malloc_test.cc  aligned_register_test.cc  bit_cast_test.cc  build_config_test.cc  byte_util_test.cc  container_test.cc  convert_test.cc  ctype_test.cc  format_test.cc  frequency_duration_test.cc  frequency_test.cc  half_test.cc  interval_test.cc  result_test.cc  reverse_storage_ring_buffer_benchmark.cc  reverse_storage_ring_buffer_test.cc  reverse_storage_ring_double_buffer_benchmark.cc  reverse_storage_ring_double_buffer_test.cc  ring_buffer_stream_test.cc  ring_buffer_test.cc  ring_double_buffer_benchmark.cc  ring_double_buffer_test.cc  source_location_test.cc  stream_util_test.cc  string_util_test.cc  unreachable_test.cc  unroll_test.cc  value_printer_test.cc  variant_test.cc  verify_test.cc
source/radio_core/benchmark/: CMakeLists.txt  base_app.h
source/radio_core/comm/: CMakeLists.txt  digital_pll.h
source/radio_core/comm/internal/: digital_pll_test.cc
source/radio_core/crypto/: CMakeLists.txt  crc-16-ccitt.h  md5.h
source/radio_core/crypto/internal/: crc-16-ccitt_test.cc  md5_test.cc
source/radio_core/info/: CMakeLists.txt  band.h  band_plan.h
source/radio_core/info/internal/: band_plan_test.cc  bands_itu1.h
source/radio_core/math/: CMakeLists.txt  average.h  base_complex.h  bessel.h  bitwise.h  color.h  color_gradient.h  colorspace.h  complex.h  complex2.h  complex3.h  complex4.h  complex8.h  dft.h  distribution.h  fft.h  fft_api.h  fft_api_pffft.h  float2.h  float3.h  float4.h  float8.h  half2.h  half3.h  half4.h  half8.h  half_complex.h  half_complex2.h  half_complex3.h  half_complex4.h  half_complex8.h  math.h  num_digits.h  quantize.h  resample.h  time.h  uint2.h  uint3.h  uint4.h  uint8.h  (+7 more)
source/radio_core/math/internal/: average_test.cc  bessel_test.cc  bitwise_test.cc  color_gradient_test.cc  color_test.cc  colorspace_test.cc  complex2_test.cc  complex3_test.cc  complex4_neon.h  complex4_test.cc  complex4_x86.h  complex8_complex4x2.h  complex8_test.cc  complex_test.cc  dft_goertzel_benchmark.cc  dft_test.cc  distribution_test.cc  fft_api_pffft_test.cc  fft_test.cc  fft_test_data.h  float2_test.cc  float3_test.cc  float4_neon.h  float4_test.cc  float4_x86.h  float8_float4x2.h  float8_test.cc  half2_test.cc  half3_test.cc  half4_neon.h  half4_test.cc  half8_half4x2.h  half8_neon.h  half8_test.cc  half_bitwise.h  half_bitwise_test.cc  half_complex2_test.cc  half_complex3_test.cc  half_complex4_neon.h  half_complex4_test.cc  (+31 more)
source/radio_core/math/kernel/: CMakeLists.txt  abs.h  dot.h  dot_flip.h  fast_abs.h  fast_arg.h  fast_int_pow.h  horizontal_max.h  horizontal_sum.h  norm.h  peak_detector.h  power_spectral_density.h  rotator.h
source/radio_core/math/unittest/: complex_matchers.h  vectorized_matchers.h
source/radio_core/modulation/: CMakeLists.txt
source/radio_core/modulation/analog/: CMakeLists.txt  bandwidth.h  info.h  iq_demodulator.h  type.h
source/radio_core/modulation/digital/: CMakeLists.txt
source/radio_core/picture/: CMakeLists.txt  memory_pixel_accessor.h  pixel_accessor.h
source/radio_core/picture/apt/: CMakeLists.txt  decoder.h  encoder.h  info.h  message.h  result.h
source/radio_core/picture/internal/: memory_pixel_accessor_test.cc
source/radio_core/picture/sstv/: CMakeLists.txt  decoder.h  encoder.h  line_decoder.h  line_encoding.h  line_sync.h  luma.h  message.h  mode.h  mode_limits.h  mode_spec.h  picture_decoder.h  picture_encoder.h  prefilter.h  result.h  vis.h  vis_decoder.h  vis_encoder.h  vox.h  vox_encoder.h
source/radio_core/protocol/: CMakeLists.txt
source/radio_core/protocol/binary/: CMakeLists.txt
source/radio_core/protocol/datalink/: CMakeLists.txt  frame.h
source/radio_core/signal/: CMakeLists.txt  analytical_signal.h  awgn_noise_injector.h  dc_blocker.h  debug_writer.h  decimator.h  digital_hysteresis.h  digital_pll.h  edge_detector.h  ema_agc.h  filter.h  filter_design.h  filter_energy.h  filter_gain.h  filter_window_heuristic.h  fir_filter.h  frequency.h  frequency_shifter.h  generator.h  hilbert.h  hysteresis.h  instant_frequency.h  instant_phase.h  integer_delay.h  interpolator.h  local_oscillator.h  peak_detector.h  polyphase_filter.h  raised_cosine.h  root_raised_cosine.h  simple_fir_filter.h  window.h
source/radio_core/signal/tool/: CMakeLists.txt  (+2 more)
source/radio_core/signal_path/: CMakeLists.txt  async_sink.h  base_signal_path.h  signal_path.h  simple_signal_path.h  sink.h  sink_collection.h  sink_method_wrapper.h
source/radio_core/tool/: CMakeLists.txt  buffered_wav_reader.h  buffered_wav_writer.h  log_util.h
source/radio_core/unittest/: CMakeLists.txt  complex_wav_file_reader.h  memory_file_writer.h  mock.h  mock_unittest.h  test.h
source/tool/: plot_constellation.py  plot_debug_signal.py  plot_fft.py  wav_diff.py
source/tool/module/: signal.py  windowed_plot.py
(+235 files in other folders)
